# virtual_micral_n

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTORS.md  CppCheckSuppression.txt  LICENSE.md  README.md  TODO.md  run_tests_with_wine.sh  ubuntu-mingw64.cmake
.github/workflows/: build.yml
data/: 8008-hello-mo5.asm  8008-hello-mo5.lst  8008-hello-world.asm  8008-hello-world.lst  8008-input-output.asm  8008-input-output.lst  8008-logo-mo5.asm  8008-logo-mo5.lst  8008-loop-loads.asm  8008-loop-loads.lst  8008-sector-led.asm  8008-sector-led.lst
documentation/: Architecture.md  BUILD.md  EmulationNotes.md  SimpleProgram.md
src/cli/: CMakeLists.txt
src/cli/src/: TextInput.cpp  TextInput.h  main.cpp
src/devices/: CMakeLists.txt
src/devices/src/: AddressStack.cpp  AddressStack.h  AutomaticStart.cpp  AutomaticStart.h  BusAddressDecoder.cpp  BusAddressDecoder.h  CPU8008.cpp  CPU8008.h  Clock.cpp  Clock.h  ConsoleCard.cpp  ConsoleCard.h  Constants8008.h  ControlBus.cpp  ControlBus.h  DataOnMDBusHolder.cpp  DataOnMDBusHolder.h  Disassemble8008.cpp  Disassemble8008.h  DiskControllerCard.cpp  DiskControllerCard.h  DiskReader.cpp  DiskReader.h  DoubleClock.cpp  DoubleClock.h  Edge.h  GeneralAddressRegister.cpp  GeneralAddressRegister.h  IOCard.cpp  IOCard.h  IOCommunicator.cpp  IOCommunicator.h  IOController.cpp  IOController.h  IO_DiskController_Connector.cpp  IO_DiskController_Connector.h  IO_StackChannel_Connector.cpp  IO_StackChannel_Connector.h  IO_Unknown_Connector.cpp  IO_Unknown_Connector.h  (+35 more)
src/devices/src/connectors/: IO_DiskController_Connector.cpp  IO_DiskController_Connector.h  IO_StackChannel_Connector.cpp  IO_StackChannel_Connector.h  IO_To_DiskController.cpp  IO_To_DiskController.h  IO_To_StackChannel.cpp  IO_To_StackChannel.h  SerialCard_To_IOCard.cpp  SerialCard_To_IOCard.h  StackChannel_DiskController_Connector.cpp  StackChannel_DiskController_Connector.h  StackChannel_To_DiskController.cpp  StackChannel_To_DiskController.h
src/devices/tests/: 8008_test.cpp  address_stack_test.cpp  clock_test.cpp  disassemble_8008_test.cpp  disk_reader_test.cpp  double_clock_test.cpp  edge_test.cpp  instructions_8008_test.cpp  interrupt_circuit_test.cpp  interrupt_controller_test.cpp  memory_page_test.cpp  simple_ram_test.cpp  simple_rom_test.cpp
src/disassembler/: CMakeLists.txt
src/disassembler/src/: OutputLine.cpp  OutputLine.h  main.cpp
src/emulation_core/: CMakeLists.txt  README.md
src/emulation_core/src/: ConnectedData.cpp  ConnectedData.h  DataBus.cpp  DataBus.h  Edge.h  Frequency.h  OwnedSignal.cpp  OwnedSignal.h  OwnedValue.h  Schedulable.h  ScheduledAction.cpp  ScheduledAction.h  ScheduledSignal.cpp  ScheduledSignal.h  Scheduler.cpp  Scheduler.h  Scheduling.h  SignalConnect.cpp  SignalConnect.h  State.cpp  State.h  ValueConnect.h
src/emulation_core/tests/: connecteddata_test.cpp  databus_test.cpp  edge_test.cpp  owned_value_test.cpp  ownedsignal_test.cpp  ownedvalue_test.cpp  scheduled_action_test.cpp  scheduled_signal_test.cpp  scheduler_test.cpp  signal_connect_test.cpp  state_test.cpp  value_connect_test.cpp
src/emulator/: CMakeLists.txt
src/emulator/src/: Recorder.cpp  Recorder.h  RecorderCollection.cpp  RecorderCollection.h  SignalRecorder.cpp  SignalRecorder.h  SimulationRunType.h  Simulator.cpp  Simulator.h  SmulationRunType.h  ValueRecorder.cpp  ValueRecorder.h  VirtualDisk.cpp  VirtualDisk.h  VirtualTTY.cpp  VirtualTTY.h
src/emulator/tests/: signal_recorder_test.cpp  value_recorder_test.cpp  virtual_disk_test.cpp  virtual_tty_test.cpp
src/file_utils/: CMakeLists.txt
src/file_utils/src/: FileReader.cpp  FileReader.h
src/gui/: CMakeLists.txt
src/gui/src/: ControllerWidget.cpp  ControllerWidget.h  ImGuiSDLGLContext.cpp  ImGuiSDLGLContext.h  ImGui_Empscripten_Context.h  ImGui_Emscripten_Context.cpp  ImGui_SDL_GL2_Context.cpp  ImGui_SDL_GL2_Context.h  ImGui_SDL_GL_Context.cpp  ImGui_SDL_GL_Context.h  Panel8008.cpp  PanelControl.cpp  PanelControl.h  PanelDisassembly.cpp  PanelDisassembly.h  PanelMemory.cpp  Plot.cpp  Plot.h  PlotStructures.h  RecorderCollection.cpp  RecorderCollection.h  SignalPlot.cpp  SignalPlot.h  Simulator.cpp  Simulator.h  ValuePlot.cpp  ValuePlot.h  main.cpp
src/gui/src/lib/: Averager.cpp  Averager.h  ClockRecorder.cpp  ClockRecorder.h  Recorder.h  SignalRecorder.cpp  SignalRecorder.h  ValueRecorder.cpp  ValueRecorder.h
src/gui/src/panels/: Panel8008.cpp  Panel8008.h  PanelControl.cpp  PanelControl.h  PanelDisassembly.cpp  PanelDiskController.cpp  PanelDiskController.h  PanelMemory.cpp  PanelMemory.h  PanelPluribus.cpp  PanelPluribus.h  PanelProcessorCard.cpp  PanelProcessorCard.h  PanelSignals.cpp  PanelSignals.h  PanelStackChannelCard.cpp  PanelStackChannelCard.h  PanelTTY.cpp  PanelTTY.h
src/gui/src/widgets/: PanelLed.cpp  PanelLed.h  PanelMemoryDisplay.h  PanelSwitch.cpp  PanelSwitch.h
src/gui/tests/: averager_test.cpp  clock_recorder_test.cpp  dummy_test.cpp  signal_recorder_test.cpp  value_recorder_test.cpp
src/i8008/: CMakeLists.txt
src/i8008/src/: Disassemble8008.h  Instructions8008.cpp  Instructions8008.h  MemoryView.h
src/i8008/tests/: disassemble_8008_test.cpp
src/mcs8/: CMakeLists.txt
src/mcs8/src/: Disassemble8008.cpp  Disassemble8008.h  Instructions8008.cpp  Instructions8008.h
src/mcs8/tests/: disassemble_8008_test.cpp  dummy.cpp
src/misc_utils/: CMakeLists.txt
src/misc_utils/src/: ToHex.h  dummy.cpp  span_compat.h
src/misc_utils/tests/: to_hex_test.cpp
tools/: collector.py  documentation.json  make_documentation.py
